# ChangeLog for sys-cluster/openmpi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.124 2014/04/17 14:59:46 jsbronder Exp $

  17 Apr 2014; Justin Bronder <jsbronder@gentoo.org> openmpi-1.7.5.ebuild,
  openmpi-1.8.ebuild:
  Fix hwloc dep #507856. See
  http://svn.open-mpi.org/svn/ompi/branches/v1.8/NEWS

*openmpi-1.7.5 (08 Apr 2014)
*openmpi-1.8 (08 Apr 2014)

  08 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org> +openmpi-1.7.5.ebuild,
  +openmpi-1.8.ebuild, -openmpi-1.6.3.ebuild, metadata.xml,
  openmpi-1.4.3.ebuild:
  [sys-cluster/openmpi] Version bump

*openmpi-1.6.5 (11 Jul 2013)

  11 Jul 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.4.4.ebuild,
  -openmpi-1.6.4-r1.ebuild, +openmpi-1.6.5.ebuild:
  bump and cleanup

  09 Jul 2013; Justin Bronder <jsbronder@gentoo.org> openmpi-1.4.3.ebuild,
  openmpi-1.4.4.ebuild, openmpi-1.4.5.ebuild, openmpi-1.6.3.ebuild,
  openmpi-1.6.4-r1.ebuild:
  add sys-cluster/mpich blocker

  02 Jul 2013; Justin Bronder <jsbronder@gentoo.org> openmpi-1.6.4-r1.ebuild,
  files/hooks-disable-malloc-override-inside-of-Gentoo-sandb.patch:
  Update patch per sandbox team, link to upstream tickets.

*openmpi-1.6.4-r1 (02 Jul 2013)

  02 Jul 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.6.4.ebuild,
  +openmpi-1.6.4-r1.ebuild,
  +files/hooks-disable-malloc-override-inside-of-Gentoo-sandb.patch:
  Do not override malloc when in a sandbox environment. Resolves #462602.

  05 Apr 2013; Justin Bronder <jsbronder@gentoo.org> openmpi-1.6.4.ebuild:
  Export FAKEROOTKEY in src_test to workaround hang in sandbox. See #462602.

*openmpi-1.6.4 (21 Mar 2013)
*openmpi-1.4.5 (21 Mar 2013)

  21 Mar 2013; Alexey Shvetsov <alexxy@gentoo.org> +openmpi-1.4.5.ebuild,
  +openmpi-1.6.4.ebuild, openmpi-1.4.3.ebuild:
  Version bump for 1.4 and 1.6 series. Fix bug #462144

  10 Jan 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.5.5.ebuild,