@@ -9,18 +9,20 @@ DIST openmpi-1.4.3.tar.bz2 6626909 SHA256 220b72b1c7ee35469ff74b4cfdbec457158ac6
 DIST openmpi-1.4.5.tar.bz2 6643760 SHA256 a3857bc69b7d5258cf7fc1ed1581d9ac69110f5c17976b949cb7ec789aae462d SHA512 f89922345cde8978483e397e9016103626db3f1787f9afccaf0f60d59caa2a4409b47b01ac221d60e24e241f2afecb636ca89688bf326dc0ca5c817de96b3e99 WHIRLPOOL 2008bd952f9cc93ead6508267f5a45ee6d9ebf9136e35e25b798400d162173514da73349518bfada4777471c32d315e8556bbee8847a5268719d6b32fd0fd811
 DIST openmpi-1.6.5.tar.bz2 10943881 SHA256 fe37bab89b5ef234e0ac82dc798282c2ab08900bf564a1ec27239d3f1ad1fc85 SHA512 b0ede0264cd9263b8ba59ec51d17ad47b5f20d49d219ca05f7c396d608398d517b2023a46a2535fd6191160d709e4805c4de436dcfee56eda287383bd69f9652 WHIRLPOOL d0288677827c1deba17295ee1b69cd21da294ac314cc49404389b4c286384f9f2f229cae4c4fd62511e7f20abc510998642d6a2edfac3f16f83078f474f8e735
 DIST openmpi-1.7.5.tar.bz2 13286694 SHA256 cb3eef6880537d341d5d098511d390ec853716a6ec94007c03a0d1491b2ac8f2 SHA512 72de2788fa26615a2e7373b5f32e0a2b9e39d56094c45b49348ef19bbb0ea306734b7d3275d76471a18628b5244d882de4ed3595eb46f13683e1c8d2b277f065 WHIRLPOOL 107edd2eeca6e0ce9a9fb9ea1cd920cb1a87e8434390f2ed93279734c61bed63e9942bf2d33081e992d4d892f77a8643abbb58194aa76f7148d8716f1648aa82
+DIST openmpi-1.8.1.tar.bz2 13297716 SHA256 171427ebc007943265f33265ec32e15e786763952e2bfa2eac95e3e192c1e18f SHA512 f1b35ace5c62c89dccdab3f2ee774dae8eaf7d7bd9e41136bb5953f9c61207620917d1905be95350215c6dbc03b494ddd18732b6b7520893e51c5b1a8861fb99 WHIRLPOOL 4d429e7c23131f050aebad11f6eb9048b09979af58d1efbbdc5f6d1d349bd5164745fdbc2ec53f326d8ae99b9af2313e2bc2bf1fb675343e8e231b787ff0aa4d
 DIST openmpi-1.8.tar.bz2 13291595 SHA256 35d5db86f49c0c64573b2eaf6d51c94ed8a06a9bb23dda475e602288f05e4ecf SHA512 8d9be16f00a0582e161851976af166aade70425c6e1b08b3f0168bf560273d9378a333a8111b3e6a5ff861592c744442c95e0b660818eaaaa1b0fcc54dbeb3fd WHIRLPOOL fbe208976ed657c0aff8c4fe8aed3968ff9e9571244f9d6c5ee7b119b80cb504bb7c1a116e03210da0d47ea0114e32ddae25ddd665b2fe4a2d76a75414fa6742
 EBUILD openmpi-1.4.3.ebuild 2687 SHA256 9365fb61ca5888953cc61602d0862489ca50c281395b06c106368c7e14ce0cf8 SHA512 2753f9ba436791cee692e856d4c7d92ac5445230af158b594f08995e61a43b90cbb09625a9374e720890b158d06fb13bc198fb9c0c72de93b7a05fe569a74cc1 WHIRLPOOL efba39e8ed2b252acfe2e573904e3f0490f65f7f2746f7c2eed6d50860321c70a7d55288d146a36536f78b8ecf0f647d9dbb3120b96c67ad5368a38ca130bccd
 EBUILD openmpi-1.4.5.ebuild 2698 SHA256 4326f9fe35dabb5ed4c15a35edb7389c3a35d12d99bf163ad02aea7c6ce4ce08 SHA512 e81ca3a6e76d448c8ed22dc1de36e11275b2860e0bb7698ca65b4f4fefdc82421b34b0bfb838b73fa273a27acc5a77d7e7c6a4b63257fda6695e213e10f0b2c0 WHIRLPOOL 09e5b23f727a22b6a2a6b3885d5f56a123b1f2c2572966438f52b1f5189b59f89c5d0533ebd9ce61e9d66fc6331477f780171f86ef9727c78bd279c7b5754950
 EBUILD openmpi-1.6.5.ebuild 5215 SHA256 19eb12b4aedd7c9a8eb3a015100d743c1687d0c3d7ac140e06c2c9f5ed2c29b8 SHA512 2bdfc777f0df9ec6347c7b1d6f1b8b8ae0ffc7775ad0e5b9b0ce12b856492f1695024f3e39518beaebb728350f7d67f58708d96de3fb808384d8283efc27267a WHIRLPOOL eda03f20c1cf682bc6fcdcd82325ade22c1e13d0d206b019b230d372bc732796cda26c76528636c865dabc7770e7a00bda36105bfcf8f1fb9e64ac5525405e5a
 EBUILD openmpi-1.7.5.ebuild 4944 SHA256 ac3a50bb72e67d10ce68d19e7d8e73218a218e1141a933daafc31e4dfcd49e72 SHA512 b0eef019d943d7e5d3a2664bbb2afb2676867dbc160553b3b624e8b4b8e318c291cfef32283f6926d2b901005581eb177889ee7470e9f9bf1a5bf353a1f41dd1 WHIRLPOOL 8540db81a925c0c5656d39bca4ce3027bd8ee50c2eb4b3733a938644afcb4717d8b8c9be6968215b62a14c78ef7fb27ea5e39949793aa97c644056117186a9e1
+EBUILD openmpi-1.8.1.ebuild 5175 SHA256 02dae1c4a8e4f846338a6a5a2575e0daadb1cf271f0a21fb3c6199ec54667390 SHA512 ddf36ff90ea11c0e0f35489dfafa26c3580f4ef46d7c7f35afaefe5f93b915fcfd1a43ea6383ca78f1de1dfd651dbe465f7839643ac13eac59e03e2ed73598ee WHIRLPOOL 66e24d899f052a86ae22e9aa5740c6f84b0f7de326a27f5dc87a21f05c8c4d14f5dd27fd83bb4b458082fcbef99327dc39b579896dd69de5a6fbb0402b505335
 EBUILD openmpi-1.8.ebuild 5081 SHA256 566ed3768495f792705c4f8c49977a8e556fb55633bad139f0f1cb104fad6fa8 SHA512 626cb724c513989b30517d3d3274c95f30d25893a671b06e79264e68ee8c85f2602d44fa61bc16ef1db6a0821aabe4b5e34c59ddc8de6d6bcb51f80a74456185 WHIRLPOOL 42bcf465f191ff82b02b6e4379c928d22eceaf936bb004ecbd4a4bbd066c2b6f88bc1a367546efc4bad70f80219f3bfe71a37143da0bbde2258a8d75695dc3c7
-MISC ChangeLog 19350 SHA256 fe16bb83b61e7723b01f3c8f0be2732443613cb278d4b5433f2a406ea0641aa2 SHA512 a7b1a3db1c14b4c0169e43f05ee19bc6130e55c551f95e5a48269bae0699488db7190ab57d47d97f3fc29c9b3b18c252b3b9ce02a8ade38815277d9e3e65a45b WHIRLPOOL 998ce658c95e37fe5eac6a827fffe942865613d4ec491d5f3c65ca1d7944612663005768e901406531964a9dd51a8ab52f57a25cdb17a46c60eeb4c5eadd34de
+MISC ChangeLog 19519 SHA256 83b246d973a7d0a9fa5679555b2c24cc9ce90bd56ee9dcc0d520620138219320 SHA512 6576d961c9c49caac702c0f76bb26f080bfa215f75b6ad9a34e70780cec30c450b0e097c243efd9afa980c184467fedee9ada5565ace162e56fdacb74c7a23f6 WHIRLPOOL b83d7a723a86e283a5e41605dfa83c1b705970e2a962189b8aab0eac7c1bf3084ba200f14c663f2aa5d275226a2e748bfa2a13fe9b4b2cb1d124824e6e54ac6e
 MISC metadata.xml 714 SHA256 fc650835101e7da842eca4c7d444f2c50746dc97610f9442ea567cb665d7bfa4 SHA512 406f1ac85885bf5068c9711afb3257fbd537d82e253a46ce70e7fef88652c4ca9ae408c694ecb4d9ddeaf688fc6859dd1c6caadb25b64aafad297e918ffa9298 WHIRLPOOL 53177e043da7f788f75d531c3b8d7aba4119585d5a8af051f50ed67f2be7d348379b420877dde8934dfac278db4665204e659acdf87bb5c1aff7fe2d96015907
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlNP7GYACgkQ4MrvBE1wQ8kIRgCfc1YQMVIz9nikzK6qK3w+5CUW
-SfoAoKbwxmhJM2WiiiLB4gXkTObYCrWv
-=XfPT
+iEYEAREIAAYFAlONJewACgkQ4MrvBE1wQ8nYWwCglAiaVLtLbL7+tsc+g7rUpEFu
+zhsAn10gZMUE/D/oKtXZMYCemEmn0aUz
+=AO6R
 -----END PGP SIGNATURE-----
