@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/openmpi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.124 2014/04/17 14:59:46 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.125 2014/06/03 01:33:26 jsbronder Exp $
+
+*openmpi-1.8.1 (03 Jun 2014)
+
+  03 Jun 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.1.ebuild:
+  Bump (#511018). Add dep on zlib and drop la files (#402095)
 
   17 Apr 2014; Justin Bronder <jsbronder@gentoo.org> openmpi-1.7.5.ebuild,
   openmpi-1.8.ebuild:
